Add styling to FA Angle-Double-Down arrow

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: #4056A1;
-    font-family: "Bungee"
+    font-family: "Bungee";
     color: #ffffff;
     position: fixed;
     left: 0;
@@ -15,3 +15,7 @@ nav {
     top: 0; 
     width: 100%;
     } 
+
+    .fa-angle-double-down {
+        position: relative;
+    }
