New tweet CSS styling

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: #4056A1;
-    font-family: "Bungee";
+    font-family: "Bungee", cursive;
     color: #ffffff;
     position: fixed;
     left: 0;
