--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,36 @@
-.new-tweet p {
-    padding: 15px;
-    background-color: #F36060;
+button {
+    background-color: #4056a1;
+    font-family: 'Bungee', sans-serif;
     color: #FFFFFF;
-    border-radius: 25px;
-    display: none;
-    text-align: center;
-    margin-top: 0px;
-}
+    margin-top: 30px;
+    margin: 75px
+  }
+
+  label {
+    font-weight: bold; 
+    margin: 75px
+  }
+
+  textarea {
+    background-color:  #f4f1ec;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #000000;
+    width: 100%;
+    border-style: none;
+    border-bottom-style: solid;
+    border-width: thick;
+    margin: 75px
+  }
+
+  output.counter {
+    font-family: 'Bungee', sans-serif;
+    color: #000000;
+    padding-top: 30px;
+    float: right;
+    margin: 75px
+  }
+
+  h2 {
+    margin: 75px
+  }
+
