--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,18 +5,22 @@ nav {
     background-color: #4056A1;
     font-family: "Bungee", cursive;
     color: #ffffff;
-    position: fixed;
     left: 0;
     z-index: 2;
     padding: 0 1.5em;
-    width: 100vw;
     height: 120px;
-    position: static; 
-    top: 0; 
+    position: fixed;
     width: 100%;
+    top: 0; 
     } 
 
     .fa-angle-double-down {
         position: relative;
         color: red
+    }
+
+    #write-tweet {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 16px;
+        justify-content: flex-start
     }
