--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,13 @@
-header {
+.main-header {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #DFB028;
     background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");
-    width: 100%;
+    width: 100vw;
     height: 400px;
     position: relative;
-    margin-top: 120px
+    margin-top: 120px;
+    flex-direction: column
     } 
     
