--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,9 +5,7 @@ nav {
     background-color: #4056A1;
     font-family: "Bungee", cursive;
     color: #ffffff;
-    left: 0;
     z-index: 2;
-    padding: 0 1.5em;
     height: 120px;
     position: fixed;
     width: 100%;
@@ -23,4 +21,13 @@ nav {
         font-family: 'Source Sans Pro', sans-serif;
         font-size: 16px;
         justify-content: flex-start
+    }
+
+    .compose-tweet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 16px;
+        justify-content: flex-start;
     }
