Over all styling edits, implement responsive design

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,9 +5,22 @@
     background-color: #DFB028;
     background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");
     width: 100vw;
-    height: 400px;
+    height: auto;
     position: relative;
-    margin-top: 120px;
-    flex-direction: column
+    flex-direction: column;
+    padding-top: 120px
     } 
     
+    @media only screen and (min-width: 1025px) {
+.main-header {
+    width: 25vw;
+    height: 400px;
+    margin-top: 170px;
+    margin-left: 50px;
+    padding-top: 0
+}
+    }
+
+    .main-header p {
+       font-size: 30px 
+    }
