--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,10 @@
+
+
+#tweets-container {
+  width: 75%;
+  justify-content: flex-end
+}
+
 button {
     background-color: #4056a1;
     font-family: 'Bungee', sans-serif;
@@ -15,17 +22,18 @@ button {
     background-color:  #f4f1ec;
     font-family: 'Source Sans Pro', sans-serif;
     color: #000000;
-    width: 90%;
+    width: 80%;
     border-style: none;
     border-bottom-style: solid;
     border-width: thick;
-    margin: 75px
+    margin: 75px;
+    margin-bottom: 0
   }
 
   output.counter {
     font-family: 'Bungee', sans-serif;
     color: #000000;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     float: right;
     margin: 75px
   }
@@ -34,3 +42,11 @@ button {
     margin: 75px
   }
 
+  form.tweet-submit {
+    padding-top: 170px
+  }
+
+  .new-tweet p {
+    color: red;
+    padding-top: 80px
+  }
