--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,47 +1,47 @@
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: "Bungee", cursive;
-    color: #ffffff;
-    z-index: 2;
-    height: 120px;
-    position: absolute;
-    width: 100%;
-    top: 0; 
-    background-color: transparent;
-    } 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Bungee", cursive;
+  color: #ffffff;
+  z-index: 2;
+  height: 120px;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  background-color: transparent;
+}
 
-    nav span {
-        margin-left: 20px;
-        font-size: 40px
-    }
+nav span {
+  margin-left: 20px;
+  font-size: 40px;
+}
 
-    .fa-angle-double-down {
-        position: relative;
-        color: red;
-        margin-right: 15px
-    }
+.fa-angle-double-down {
+  position: relative;
+  color: red;
+  margin-right: 15px;
+}
 
-    #write-tweet {
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 26px;
-        justify-content: flex-start
-    }
+#write-tweet {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 26px;
+  justify-content: flex-start;
+}
 
-    .compose-tweet {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 16px;
-        justify-content: flex-start;
-        margin-right: 20px
-    }
+.compose-tweet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 16px;
+  justify-content: flex-start;
+  margin-right: 20px;
+}
 
-    @media only screen and (min-width: 1025px) {
-        nav {
-            background-color: #4056A1;
-            position: fixed
-        }
-            }
+@media only screen and (min-width: 1025px) {
+  nav {
+    background-color: #4056a1;
+    position: fixed;
+  }
+}
