--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -36,16 +36,14 @@ main {
 
 .tweet-column {
   flex-direction: column;
-  display: flex
+  display: flex;
 }
 @media only screen and (min-width: 1025px) {
   .tweet-column {
-     flex-direction: row;
-     margin-top: 120px
+    flex-direction: row;
+    margin-top: 120px;
   }
-      }
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
- 
