--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,7 @@
 #tweets-container {
   width: 75%;
   justify-content: flex-end;
+ 
 }
 
 button {
@@ -20,20 +21,21 @@ textarea {
   background-color: #f4f1ec;
   font-family: "Source Sans Pro", sans-serif;
   color: #000000;
-  width: 80%;
+  width: 100%;
   border-style: none;
   border-bottom-style: solid;
   border-width: thick;
-  margin: 75px;
-  margin-bottom: 0;
+  margin: 50px;
+  margin-bottom: 0px;
+  justify-content: flex-start
 }
-
 
 output.counter {
   font-family: "Bungee", sans-serif;
   color: #000000;
   float: right;
   margin: 75px;
+  margin-right: 0px;
 }
 
 h2 {
