Changes as per feedback, wrap text and remove stacking of error messages

--- a/public/styles/tweet-timeline.css
+++ b/public/styles/tweet-timeline.css
@@ -20,6 +20,10 @@ section.tweet_history {
   justify-content: space-between;
 }
 
+.tweet-body {
+  word-wrap: break-word
+}
+
 .user-image {
   display: flex;
 }
