--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,18 +20,19 @@ body {
 
 main {
   display: flex;
-  width: 65%;
+  width: 55%;
   background-color: #f4f1ec;
   flex-direction: column;
   margin: auto;
   padding-bottom: 40px;
-  justify-content: flex-end;
   align-items: center;
 }
 
 .tweet-column {
   flex-direction: column;
   display: flex;
+  justify-content: center;
+  margin-left: 10rem;
 }
 @media only screen and (min-width: 1025px) {
   .tweet-column {
@@ -39,6 +40,4 @@ main {
     margin-top: 120px;
   }
 }
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+
